      original error condition object at the \code{"condition"}
      attribute.

      \item All packages are lazy-loaded irrespective of the
      \samp{LazyLoad} field in the \file{DESCRIPTION} file.
      (Experimental: documentation is not yet updated.)
      
      \item Added new \samp{\figure} tag to Rd markup, so
      that figures can be included in help pages when displayed
      in HTML or LaTeX.
      
      \item The built-in httpd server now allows access to files
      in the session temporary directory \code{tempdir()},
      addressed as the \samp{/session} directory on the httpd
      server.
      
      \item Development versions of \R are no longer referred to by the
      number under which they might be released, e.g. in the startup
      banner, \command{R --version} and \code{sessionUtils()}.  The
      correct way to refer to a development version of R is
      \sQuote{R-devel}, preferably with the date and SVN version number.\cr
      E.g. \samp{R-devel (2011-07-04 r56266)}
      
      \item There is a new function \code{texi2pdf()} in package
      \pkg{tools}, currently a convenience wrapper for
      \code{texi2dvi(pdf = TRUE)}.
      
      \item There are two new options for typesetting PDF manuals from
      Rd files.  These are \samp{beramono} and \samp{inconsolata}, and
      used the named font for mononspaced output. They are intended to
      be used in combination with \samp{times}, and
      \samp{times,inconsolata,hyper} is now the default for the
      reference manual and package manuals.
    }
  }

  \subsection{GRAPHICS DEVICES}{
    \itemize{
      \item The \code{pdf()} device makes use of Flate compression: this
      controlled by the new logical argument \code{compress}, and is
      enabled by default.

      \item Devices \code{svg()}, \code{cairo_pdf()} and
      \code{cairo_ps()} gain a \code{family} argument.

      On a Unix-alike \code{X11()} gains a \code{family} argument.  This