@@ -17,7 +17,7 @@ DEFPKGS = NULL
 all:
 	@$(ECHO) "building package '$(pkg)'"
 	@$(MKINSTALLDIRS) $(top_builddir)/library/$(pkg)
-	@$(MAKE) -f Makefile.win mkR1 mkdesc mkdemos mkpo
+	@$(MAKE) -f Makefile.win mkR1 mkdesc mkdemos mkpo mkfigs
 	@$(MAKE) -f Makefile.win mklazycomp
 
 include $(top_srcdir)/share/make/basepkg.mk
